reparando bugs y agregando criterios de aceptacion

--- a/src/index.css
+++ b/src/index.css
@@ -40,4 +40,11 @@
   max-width: 720px !important; 
 }
 
+.crear-parche:hover{
+  background-color:#140D4F
+}
+.buttonCrear:hover{
+  background-color:#F58442
+}
+
 
